Update auth-service components